@startuml Models

hide empty methods
hide circle

class User {
    id: uuid
    email: string
    name: string
    password_digest: string
}

class ApiSession {
    token: string
}

ApiSession "*" --* User

class Post {
    id: uuid
    text: string
    created_at: DateTime
}

Post "*" --* User: author
Post "*" --* Post: parent

class Reaction {
    id: uuid
    emotion: string
}

Reaction "*" --* User
Reaction "*" --* Post

@enduml
